<resources>
    <string name="app_name">Nham</string>
    <string name="login_your_account">Login Your Account</string>
    <string name="enter_registered_email_or_phone_number_and_password_to_login_your_account">Enter registered email or phone number and password to login your account</string>
    <string name="your_phone_number">Your Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sigup">Sigup</string>
    <string name="don_t_have_an_account">Don’t have an Account ?</string>
    <string name="add">ADD</string>
    <string name="title">Crispy Thin Crust Pizza</string>
    <string name="dollar_sign">$</string>
    <string name="isvergetarian">vegetarian </string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="orders">Orders</string>
    <string name="account">Account</string>
    <string name="pizza">Pizza</string>
    <string name="checkin">Checkin</string>
    <string name="burger">Burger</string>
    <string name="drink">Drink</string>
    <string name="menu">Category Menu</string>
    <string name="new_product">New Product</string>
    <string name="most_popular">Most Popular</string>
    <string name="loginProfile">Login</string>
    <string name="your_cart_is_empty_please_add_item">Your cart is empty, please add item</string>
    <string name="emptyproduct">emptyProduct</string>
    <string name="cart_header">Cart</string>
    <string name="clear_cart">Clear Cart</string>
    <string name="equal">=</string>
    <string name="minus">-</string>
    <string name="add_sign">+</string>
    <string name="total">Total</string>
    <string name="signOut">Log Out</string>
    <string name="logoutimage">LogOutImage</string>
    <string name="contact_us">Contact us</string>
    <string name="support">Support</string>
    <string name="settings">Settings</string>
    <string name="share_app">Share app</string>
    <string name="join_us">Join Us!</string>
    <string name="my_order">My Order</string>
    <string name="apply_promo_coupons">Apply Promo Coupons</string>
    <string name="special_instrutions">Special Instrutions</string>
    <string name="select_payment_method">Select payment method</string>
    <string name="dollar">$</string>
    <string name="confirm_order">CONFIRM ORDER</string>
    <string name="profile">Profile</string>
    <string name="order">Order</string>
    <string name="track_order">Track Order</string>
    <string name="phnom_penh">Phnom Penh</string>
    <string name="search">Search</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="credit_cards">Credit Cards</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="delete_credit_card">Delete Credit Card</string>
    <string name="manage_subscription">Manage Subscription</string>
    <string name="cancel_subscription">Cancel Subscription</string>
    <string name="change_payment_method">Change Payment Method</string>
    <string name="default_card">DEFAULT</string>
    <string name="expires">Expires %1$s/%2$s</string>
    <string name="next_billing">Next billing: %1$s</string>
    <string name="payment_card">Payment: %1$s</string>
    <string name="delete_card_confirmation">Are you sure you want to delete this credit card?</string>
    <string name="delete_card_with_subscriptions">This credit card is being used by %1$d subscription(s). Deleting it will affect these subscriptions. Do you want to continue?</string>
    <string name="subscriptions_affected">Subscriptions Affected</string>
    <string name="subscriptions_affected_message">The following subscriptions were affected by the credit card deletion:\n\n%1$s\n\nPlease update their payment methods.</string>
    <string name="cancel_subscription_confirmation">Are you sure you want to cancel your %1$s subscription?</string>
    <string name="keep_subscription">Keep Subscription</string>
    <string name="feature_coming_soon">This feature is coming soon</string>
    <string name="credit_card_deleted_successfully">Credit card deleted successfully</string>
    <string name="error_loading_payment_methods">Failed to load payment methods</string>
    <string name="error_deleting_credit_card">Failed to delete credit card</string>
</resources>