<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="284dp"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:layout_marginTop="130dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="196dp"
            android:layout_height="30sp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:text="@string/login_your_account"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="284dp"
            android:layout_height="42dp"
            android:gravity="center"
            android:textSize="14sp"
            android:text="@string/enter_registered_email_or_phone_number_and_password_to_login_your_account" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="57dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="334dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            app:cardCornerRadius="12dp">

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_input"
                android:padding="15dp"
                android:hint="@string/your_phone_number"
                android:textColor="@color/grey"
                android:textSize="12sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="334dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="21dp"
            app:cardCornerRadius="12dp">

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_input"
                android:padding="15dp"
                android:hint="@string/password"
                android:textColor="@color/grey"
                android:textSize="12sp" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="334dp"
            android:layout_height="45dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/solid_green"
            android:textColor="@color/white"
            app:cornerRadius="10dp"
            android:text="@string/login" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sigup"
                android:textColor="@color/blue"
                android:layout_marginStart="15dp"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>