<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/allProfileFragment"
        android:layout_width="match_parent"
        android:layout_height="350dp">


        <ImageView
            android:id="@+id/coverImage"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_emptyimage_foreground" />

        <LinearLayout
            android:id="@+id/linearOnProfile"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="150dp"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="5dp"
                app:cardCornerRadius="50dp">

                <ImageView
                    android:id="@+id/imageProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_emptyimage_foreground" />
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/firstName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:text="Sok" />

                <TextView
                    android:id="@+id/lastName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:text="Sao" />

            </LinearLayout>

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"
                tools:text="soksao@gmail.com" />
        </LinearLayout>

    </RelativeLayout>

    <Button
        android:id="@+id/myButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/loginProfile"
        android:textSize="25sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linearProfile"
        android:layout_width="match_parent"
        android:layout_height="380dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="350dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:src="@drawable/baseline_shopping_bag_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_order"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:src="@drawable/baseline_link_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/join_us"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="0dp"
                android:src="@drawable/baseline_share_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share_app"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:src="@drawable/baseline_settings_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:src="@drawable/baseline_support_agent_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/support"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnSignOut"
            android:layout_width="100dp"
            android:layout_height="20dp"
            tools:ignore="UseCompoundDrawables"
           >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:src="@drawable/baseline_logout_24" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signOut"
                android:textColor="@color/red" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
